修改首页图标，增加手机号授权。
